Bug  - fixed a problem with edge  - todo find out why Chrome loads the same bumble twice
Feature
 - injected another item in the same bundle
 - added a super simple worker
 - automated double build
 - added a ready signal from the worker
 - now injects asynchronously on ready callback

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build-main": "rollup -c",
+    "build-shared": "cd src/common && rollup -c && cd ../../",
     "build": "cd src/common && rollup -c && cd ../../ && rollup -c"
   },
   "repository": {
